# Info2024

./: .gitconfig  .gitignore  README.md  test_can_tx.sh  test_can_tx.yaml  test_output.txt
.devcontainer/: Dockerfile  devcontainer.json
can_robot/: README.md  package.xml  setup.py
can_robot/can_robot/: can_rx.py
docs/: config_environnement_raspi.md  environnement_raspi.md  how_to_start_gazebo_simulation.md  how_to_start_real_robot.md  lidar.md
scripts/: update_git_config.sh
src/arm_controller/: package.xml  setup.cfg  setup.py
src/arm_controller/arm_controller/: arm_controller_client.py  arm_controller_server.py
src/arm_interface/: CMakeLists.txt  package.xml
src/arm_interface/action/: ArmAction.action  ExecArmAction.action
src/behaviour/: package.xml  setup.py
src/behaviour/behaviour/: behaviour_node.py
src/bluetooth_teleop/: README.md  package.xml  setup.cfg  setup.py
src/bluetooth_teleop/bluetooth_teleop/: bluetooth_tel.py
src/can_interface/: CMakeLists.txt  package.xml
src/can_interface/msg/: ArmFeedback.msg  CanRaw.msg  MotorCmd.msg  MotorsFeedback.msg  SensorCmd.msg  ServoCmd.msg  Tirette.msg
src/can_robot/: README.md  package.xml  setup.cfg  setup.py
src/can_robot/can_robot/: can_raw_rx.py  can_raw_tx.py  can_rx.py  can_tx.py  test.py
src/can_test/: README.md  package.xml  setup.cfg  setup.py
src/can_test/can_test/: can_tx_validation.py
src/can_test/test/: test_can_tx.yaml
src/chain_controller/: package.xml  setup.cfg  setup.py
src/chain_controller/chain_controller/: chain_client.py  chain_controller_server.py
src/chain_interface/: CMakeLists.txt  package.xml
src/chain_interface/action/: ControlChain.action
src/enemy_detection/: package.xml  setup.cfg  setup.py
src/enemy_detection/enemy_detection/: enemy_detection.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Behaviour.action
src/joy_teleop/: package.xml  setup.py
src/joy_teleop/config/: joy_teleop_atlas.yaml
src/joy_teleop/launch/: joy_teleop_atlas.launch.py  joy_teleop_twist.launch.py
src/launch_files/: package.xml  setup.cfg  setup.py
src/launch_files/launch/: launch_actions.py
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/launch/: my_robot_control.launch.py
src/my_robot_control/scripts/: command_test_scripts.py  control_can.py  my_robot_control.py
src/planner/: package.xml  setup.py
src/planner/planner/: planner_node.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/robot/: inertial_macros.xacro  robot.urdf.xacro  ros2_control.xacro
src/robot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
src/robot_description/urdf/lrf/: lrf.gazebo.xacro  lrf.urdf.xacro
src/robot_description/urdf/top/: top.gazebo.xacro  top.urdf.xacro
src/robot_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
src/robot_description/urdf/wheel_roller/: wheel_roller.gazebo.xacro  wheel_roller.transmission.xacro  wheel_roller.urdf.xacro
src/robot_simu/: CMakeLists.txt  package.xml
src/robot_simu/config/: controllers.yaml
src/robot_simu/launch/: launch_real.launch.py  launch_sim.launch.py  rsp.launch.py  rviz.launch.py
src/robot_simu/rviz/: default_view.rviz  default_view2.rviz
src/robot_simu/worlds/: testwtable.world  testwtable3.world
src/robot_table/: model.config  model.sdf
src/robot_table/meshes/: table_2024.dae
src/strategy/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/strategy/launch/: homologation.launch.py  match_1_bleu.launch.py  match_1_jaune.launch.py
src/strategy/strategy/: homologation.py  homologation_bras.py  match_1_bleu.py  match_1_jaune.py  strategy.py  test_rotation.py
src/teleop_atlas/: CMakeLists.txt  package.xml
src/teleop_atlas/config/: teleop_twist_joy_atlas.yaml
src/teleop_atlas/launch/: teleop_atlas.launch.py
src/urg_node2/launch/: urg_node2.launch.py
(+6 files in other folders)
